--- a/docs/config.json
+++ b/docs/config.json
@@ -1,11 +1,5 @@
 {
     "Theme" : "superhero",
     "Title": "MacPatch Documentation",
-    "Css":      [
-        "http://webspace.markdown.io/custom/mystyles.css"
-    ],
-    "StandaloneCss": false,
-    "Javascript":   [
-        "http://webspace.markdown.io/custom/myscript.js"
-    ],
+    "StandaloneCss": false
 }
