--- a/docs/config.json
+++ b/docs/config.json
@@ -1,5 +1,11 @@
 {
-    "Theme" : "superhero",
+    "Theme": "spacelab",
     "Title": "MacPatch Documentation",
-    "StandaloneCss": false
+    "Css": [
+        "http://webspace.markdown.io/custom/mystyles.css"
+    ],
+    "StandaloneCss": false,
+    "Javascript": [
+        "http://webspace.markdown.io/custom/myscript.js"
+    ]
 }
