--- a/docs/config.json
+++ b/docs/config.json
@@ -1,5 +1,5 @@
 {
-    "Theme": "spacelab",
+    "Theme": "flatly",
     "Title": "MacPatch Documentation",
     "Css": [
         "http://webspace.markdown.io/custom/mystyles.css"
