--- a/docs/config.json
+++ b/docs/config.json
@@ -1,4 +1,5 @@
 {
+    "Theme": "journal",
     "Title": "MacPatch Documentation",
     "Css": [
         "http://webspace.markdown.io/custom/mystyles.css"
