--- a/docs/config.json
+++ b/docs/config.json
@@ -1,7 +1,5 @@
 {
     "Theme": "journal",
-    "Title": "MacPatch Documentation",
-    "Css": [
-        "http://webspace.markdown.io/custom/mystyles.css"
+    "Title": "MacPatch Documentation"
     ]
 }
