--- a/docs/config.json
+++ b/docs/config.json
@@ -1,5 +1,7 @@
 {
     "Theme": "journal",
-    "Title": "MacPatch Documentation"
+    "Title": "MacPatch Documentation",
+    "Css": [
+        "http://webspace.markdown.io/custom/mystyles.css"
     ]
 }
