--- a/MacPatch PKG/Combined/Resources/mpInfo.ini
+++ b/MacPatch PKG/Combined/Resources/mpInfo.ini
@@ -1,15 +1,13 @@
 [agent]
-version="2.1.1"
-agent_version="2.1.1"
-build="1"
-framework="1.0.0"
-osver="*"
-pkg=/Contents/Packages/MPBaseClient.pkg
+version=2.1.1
+agent_version=2.1.1
+build=1
+osver=*
+pkg=/Base.pkg
 
 [updater]
-version="2.1.1"
-agent_version="2.1.1"
-build="1"
-framework="1.0.0"
-osver="*"
-pkg=/Contents/Packages/MPUpdateClient.pkg
+version=2.1.1
+agent_version=2.1.1
+build=1
+osver=*
+pkg=/Updater.pkg
