--- a/MacPatch PKG/Combined/Resources/mpInfo.ini
+++ b/MacPatch PKG/Combined/Resources/mpInfo.ini
@@ -1,13 +1,13 @@
 [agent]
-version=2.1.1
+version=1.1.0
 agent_version=2.1.1
 build=1
-osver=*
+osver=10.6.8
 pkg=/Base.pkg
 
 [updater]
-version=2.1.1
+version=1.2.0
 agent_version=2.1.1
 build=1
-osver=*
+osver=10.6.8
 pkg=/Updater.pkg
