--- a/MacPatch PKG/Combined/Resources/mpInfo.ini
+++ b/MacPatch PKG/Combined/Resources/mpInfo.ini
@@ -1,13 +1,13 @@
 [agent]
-version=1.1.0
-agent_version=2.1.1
+version=1.5.0
+agent_version=2.2.0
 build=1
-osver=10.6.8
+osver=*
 pkg=/Base.pkg
 
 [updater]
-version=1.2.0
-agent_version=2.1.1
+version=1.5.0
+agent_version=2.2.0
 build=1
-osver=10.6.8
+osver=*
 pkg=/Updater.pkg
