MacPatch Beta 1 Rev 1
Updated Pathing for 2.2 web services

--- a/MacPatch Server/Server/conf/httpd/conf/extra/httpd-default.conf
+++ b/MacPatch Server/Server/conf/httpd/conf/extra/httpd-default.conf
@@ -13,7 +13,7 @@ Timeout 300
 # KeepAlive: Whether or not to allow persistent connections (more than
 # one request per connection). Set to "Off" to deactivate.
 #
-KeepAlive On
+KeepAlive Off
 
 #
 # MaxKeepAliveRequests: The maximum number of requests to allow
