--- a/MacPatch Server/Server/conf/httpd/conf/extra/httpd-vhosts.conf
+++ b/MacPatch Server/Server/conf/httpd/conf/extra/httpd-vhosts.conf
@@ -65,10 +65,10 @@ Listen 443
 	
 	<IfModule mod_proxy_balancer.c>
 			ProxyPass / balancer://admin-balancer-group/ stickysession=JSESSIONID
-			ProxyPassReverse /admin balancer://admin-balancer-group/
+			ProxyPassReverse / balancer://admin-balancer-group/
 			<Proxy "balancer://admin-balancer-group">
 			#AdminBalanceStart
-					BalancerMember http://localhost:2602 route=mpbeta01-site loadfactor=50
+					BalancerMember http://localhost:4601 route=mp-site loadfactor=50
 			#AdminBalanceStop		
 			</Proxy>
 	</IfModule>
@@ -109,7 +109,7 @@ Listen 2600
                 ProxyPassReverse / balancer://wsl-balancer-group/
                 <Proxy "balancer://wsl-balancer-group">
                 #WslBalanceStart
-                        BalancerMember http://localhost:2601 route=mpbeta01-wsl loadfactor=50
+                        BalancerMember http://localhost:3601 route=mp-ws loadfactor=50
                 #WslBalanceStop        
                 </Proxy>
         </IfModule>
