--- a/MacPatch Server/Server/conf/httpd/conf/extra/httpd-vhosts.conf
+++ b/MacPatch Server/Server/conf/httpd/conf/extra/httpd-vhosts.conf
@@ -64,20 +64,25 @@ Listen 443
 	</Directory>
 	
 	<IfModule mod_proxy_balancer.c>
-			ProxyPass / balancer://admin-balancer-group/ stickysession=JSESSIONID
-			ProxyPassReverse / balancer://admin-balancer-group/
-			<Proxy "balancer://admin-balancer-group">
-			#AdminBalanceStart
-					BalancerMember http://localhost:4601 route=mp-site loadfactor=50
-			#AdminBalanceStop		
-			</Proxy>
+		KeepAlive Off
+		Timeout 5400
+		ProxyTimeout 5400
+		ProxyPass / balancer://admin-balancer-group/ stickysession=JSESSIONID
+		ProxyPassReverse / balancer://admin-balancer-group/
+		<Proxy "balancer://admin-balancer-group">
+		#AdminBalanceStart
+				BalancerMember http://localhost:4601 route=mp-site loadfactor=50
+		#AdminBalanceStop		
+		</Proxy>
+		ProxyPreserveHost On
+		ProxyStatus On
 	</IfModule>
 	
 	<Location "/balancer-manager">
-			SetHandler balancer-manager
-			Order Deny,Allow
-			Deny from all
-			Allow from all
+		SetHandler balancer-manager
+		Order Deny,Allow
+		Deny from all
+		Allow from all
 	</Location>
 </VirtualHost>
 
@@ -105,13 +110,18 @@ Listen 2600
                 AllowOverride None
         </Directory>
         <IfModule mod_proxy_balancer.c>
-        		ProxyPass / balancer://wsl-balancer-group/ stickysession=JSESSIONID
-                ProxyPassReverse / balancer://wsl-balancer-group/
-                <Proxy "balancer://wsl-balancer-group">
-                #WslBalanceStart
-                        BalancerMember http://localhost:3601 route=mp-ws loadfactor=50
-                #WslBalanceStop        
-                </Proxy>
+        	KeepAlive Off
+			Timeout 300
+			ProxyTimeout 300
+			ProxyPass / balancer://wsl-balancer-group/ stickysession=JSESSIONID
+			ProxyPassReverse / balancer://wsl-balancer-group/
+			<Proxy "balancer://wsl-balancer-group">
+			#WslBalanceStart
+					BalancerMember http://localhost:3601 route=mp-ws loadfactor=50
+			#WslBalanceStop        
+			</Proxy>
+			ProxyPreserveHost On
+			ProxyStatus On
         </IfModule>
         <Location "/wsl-balancer-manager">
                 SetHandler balancer-manager
