--- a/MacPatch/MPReboot/MPReboot/MPReboot-Info.plist
+++ b/MacPatch/MPReboot/MPReboot/MPReboot-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>MPRebootV2</string>
+	<string>MPReboot</string>
 	<key>CFBundleIdentifier</key>
 	<string>gov.llnl.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.1</string>
+	<string>1.2.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -31,6 +31,6 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>MPInfo</key>
-	<string>MacPatch 2.2.0 Client Software</string>
+	<string>MacPatch 2.2.2 Client Software</string>
 </dict>
 </plist>
