Bug Fixes & Updates
Fixed Issue with disk size inv
Fixed Issue with support for new SEP AV
Fixed Issue with uninstalling multiple items in catalog
Fixed Issue with failed apple updates, failed updates now try a second
time
Fixed Issue where full inventory collection did no happen after client
was deleted and added
Fixed Issue with Reboot launching multiple reboot apps
Fixed Issue with URL encoding, support patch groups with a space in the
name

--- a/MacPatch Proxy Server/Server/conf/LaunchDaemons/gov.llnl.mp.ProxySync.plist
+++ b/MacPatch Proxy Server/Server/conf/LaunchDaemons/gov.llnl.mp.ProxySync.plist
@@ -12,7 +12,11 @@
 		<string>-p</string>
 		<string>/Library/MacPatch/Server/conf/etc/gov.llnl.MPProxySync.plist</string>
 	</array>
+	<key>KeepAlive</key>
+	<true/>
 	<key>StartInterval</key>
 	<integer>1800</integer>
+	<key>SuccessfulExit</key>
+	<false/>
 </dict>
 </plist>
