--- a/MacPatch Server/Server/conf/LaunchDaemons/gov.llnl.mp.tcinvd.plist
+++ b/MacPatch Server/Server/conf/LaunchDaemons/gov.llnl.mp.tcinvd.plist
@@ -8,10 +8,10 @@
 	<string>gov.llnl.mp.invd</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/Library/MacPatch/Server/bin/MPInventoryD</string>
-		<string>-c</string>
+		<string>/Library/MacPatch/Server/conf/scripts/MPInventoryD.py</string>
+		<string>--siteXML</string>
 		<string>/Library/MacPatch/Server/conf/etc/siteconfig.xml</string>
-		<string>-f</string>
+		<string>--files</string>
 		<string>/Library/MacPatch/Server/tomcat-mpws/InvData/Files</string>
 	</array>
 	<key>RunAtLoad</key>
