--- a/MacPatch/Self Patch/Self Patch/Self Patch-Info.plist
+++ b/MacPatch/Self Patch/Self Patch/Self Patch-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>MPSelfPatchV2</string>
+	<string>MPSelfPatch</string>
 	<key>CFBundleIdentifier</key>
 	<string>gov.llnl.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.6.2</string>
+	<string>1.6.3</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
