--- a/MacPatch Server/Server/conf/etc/gov.llnl.mp.sync.plist
+++ b/MacPatch Server/Server/conf/etc/gov.llnl.mp.sync.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>MPServerAddress</key>
-	<string>mpprod01.llnl.gov</string>
+	<string>localhost</string>
 </dict>
 </plist>
