Fixed Issue With SQL statement in web service.

--- a/MacPatch Server/Server/conf/LaunchDaemons/gov.llnl.mp.rsync.plist
+++ b/MacPatch Server/Server/conf/LaunchDaemons/gov.llnl.mp.rsync.plist
@@ -12,7 +12,7 @@
         <array>
                 <string>/usr/bin/rsync</string>
                 <string>--daemon</string>
-                <string>--config=/etc/rsyncd.conf</string>
+                <string>--config=/Library/MacPatch/Server/conf/etc/rsyncd.conf</string>
 		<string>--no-detach</string>
         </array>
         <key>inetdCompatibility</key>
