--- a/MacPatch Server/Server/conf/etc/siteconfig.json
+++ b/MacPatch Server/Server/conf/etc/siteconfig.json
@@ -16,14 +16,14 @@
         },
         "ldap": 
         {
-            "server":"AD-DOMAIN-FQDN",
-            "searchbase":"AD-SEARCH-BASE",
+            "server":"SERVERNAME",
+            "searchbase":"SEARCH-BASE",
             "attributes":"givenname,initials,sn,mail,memberOf,dn,samAccountName,userPrincipalName",
-            "port":"AD-DOMAIN-PORT",
+            "port":"SERVER-PORT",
             "secure":"AD-DOMAIN-SSL",
-            "loginAttr":"AD-LOGIN-ATTR",
-            "loginUsrPrefix":"AD-LOGIN-PRE",
-            "loginUsrSufix":"AD-LOGIN-SUF"
+            "loginAttr":"LOGIN-ATTRIBUTE",
+            "loginUsrPrefix":"LOGIN-PREFIX",
+            "loginUsrSufix":"LOGIN-SUFFIX"
         },
         "database": 
         {
@@ -36,7 +36,7 @@
                 "hoststringPre":"jdbc:mysql:",
                 "hoststringURI":"?cacheResultSetMetadata=false&amp;autoReconnect=true&amp;zeroDateTimeBehavior=convertToNull",
                 "drivername":"com.mysql.jdbc.Driver",
-                "username":"[DB-USER]",
+                "username":"mpdbadm",
                 "password":"[DB-PASS]",
                 "maxconnections":500,
                 "logintimeout":30,
