Changed example username and password.

--- a/MacPatch Server/Server/conf/etc/siteconfig.json
+++ b/MacPatch Server/Server/conf/etc/siteconfig.json
@@ -64,8 +64,8 @@
         {
             "enabled": "YES",
             "server":"127.0.0.1",
-            "username":"bObama",
-            "password":"imdumberthanbush"
+            "username":"exampleusername",
+            "password":"examplepassword"
         }
     }
 }
