--- a/MacPatch/MPClientStatus/MPClientStatus/MPClientStatus-Info.plist
+++ b/MacPatch/MPClientStatus/MPClientStatus/MPClientStatus-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>MPClientStatusV2</string>
+	<string>MPClientStatus</string>
 	<key>CFBundleIdentifier</key>
 	<string>gov.llnl.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -34,5 +34,7 @@
 	<string>ClientStatusMainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSUserNotificationAlertStyle</key>
+	<string>alert</string>
 </dict>
 </plist>
