Updated Copyright and MPInfo

--- a/MacPatch/MPLoginAgent/MPLoginAgent/Info.plist
+++ b/MacPatch/MPLoginAgent/MPLoginAgent/Info.plist
@@ -32,5 +32,7 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>MPInfo</key>
+	<string>MacPatch v2.7.0 Client Software</string>
 </dict>
 </plist>
