--- a/MacPatch Server/Server/conf/httpd/conf/extra/httpd-vhosts.conf
+++ b/MacPatch Server/Server/conf/httpd/conf/extra/httpd-vhosts.conf
@@ -51,8 +51,13 @@ Listen 443
     CustomLog "logs/80_access_log" common
     
     <IfModule mod_ssl.c>
-	        SSLEngine On
-	        SSLCipherSuite "ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:+LOW:!SSLv2:+EXP:+eNULL"
+    		SSLEngine On
+
+    		SSLProtocol		all -SSLv2 -SSLv3 -TLSv1
+		    SSLCipherSuite	ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK
+		    SSLHonorCipherOrder     on
+		    SSLCompression          off
+
 	        SSLCertificateFile "/Library/MacPatch/Server/conf/apacheCerts/server.crt"
 	        SSLCertificateKeyFile "/Library/MacPatch/Server/conf/apacheCerts/server.key"
 	</IfModule>
@@ -97,7 +102,13 @@ Listen 2600
         
         <IfModule mod_ssl.c>
 	        SSLEngine On
-	        SSLCipherSuite "ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:+LOW:!SSLv2:+EXP:+eNULL"
+
+	        SSLProtocol		all -SSLv2 -SSLv3 -TLSv1
+		    SSLCipherSuite	ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK
+		    SSLHonorCipherOrder     on
+		    SSLCompression          off
+
+	        #SSLCipherSuite "ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:+LOW:!SSLv2:+EXP:+eNULL"
 	        SSLCertificateFile "/Library/MacPatch/Server/conf/apacheCerts/server.crt"
 	        SSLCertificateKeyFile "/Library/MacPatch/Server/conf/apacheCerts/server.key"
 		</IfModule>
