--- a/MacPatch/MPClientStatus/MPClientStatus/MPClientStatus-Info.plist
+++ b/MacPatch/MPClientStatus/MPClientStatus/MPClientStatus-Info.plist
@@ -36,5 +36,10 @@
 	<string>NSApplication</string>
 	<key>NSUserNotificationAlertStyle</key>
 	<string>alert</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
