--- a/MacPatch/MPLoginAgent/MPLoginAgent/Info.plist
+++ b/MacPatch/MPLoginAgent/MPLoginAgent/Info.plist
@@ -34,5 +34,10 @@
 	<string>NSApplication</string>
 	<key>MPInfo</key>
 	<string>MacPatch v2.7.0 Client Software</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
