--- a/MacPatch/Self Patch/Self Patch/Self Patch-Info.plist
+++ b/MacPatch/Self Patch/Self Patch/Self Patch-Info.plist
@@ -32,5 +32,10 @@
 	<string>SelfPatchMainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
