--- a/MacPatch Server/Server/conf/etc/gov.llnl.mp.patchloader.plist
+++ b/MacPatch Server/Server/conf/etc/gov.llnl.mp.patchloader.plist
@@ -25,11 +25,17 @@
 			<string>10.9</string>
 		</dict>
 		<dict>
-            <key>catalogurl</key>
-            <string>content/catalogs/others/index-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1.sucatalog</string>
-            <key>osver</key>
-            <string>10.10</string>
-    	</dict>
+			<key>catalogurl</key>
+			<string>content/catalogs/others/index-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1.sucatalog</string>
+			<key>osver</key>
+			<string>10.10</string>
+		</dict>
+		<dict>
+			<key>catalogurl</key>
+			<string>content/catalogs/others/index-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1.sucatalog</string>
+			<key>osver</key>
+			<string>10.11</string>
+		</dict>
 	</array>
 	<key>MPServerAddress</key>
 	<string>localhost</string>
