Added Support to disable running web apps

--- a/MacPatch Server/Server/conf/etc/siteconfig.json
+++ b/MacPatch Server/Server/conf/etc/siteconfig.json
@@ -1,10 +1,15 @@
 {
     "settings": 
     {
+        "services":
+        {
+            "console":true,
+            "mpwsl":true
+        },
         "paths": 
         {
-                "base":"/Library/MacPatch",
-                "content":"/Library/MacPatch/Content/Web"
+            "base":"/Library/MacPatch",
+            "content":"/Library/MacPatch/Content/Web"
         },
         "users": 
         {
