Disable Services by default, let setup enable correct ones

--- a/MacPatch Server/Server/conf/etc/siteconfig.json
+++ b/MacPatch Server/Server/conf/etc/siteconfig.json
@@ -3,8 +3,8 @@
     {
         "services":
         {
-            "console":true,
-            "mpwsl":true
+            "console":false,
+            "mpwsl":false
         },
         "paths": 
         {
