--- a/MacPatch Server/Server/conf/etc/siteconfig.json
+++ b/MacPatch Server/Server/conf/etc/siteconfig.json
@@ -85,6 +85,10 @@
             "server":"127.0.0.1",
             "username":"exampleusername",
             "password":"examplepassword"
+        },
+        "dbSchema": 
+        {
+            "checkSchema": true
         }
     }
 }
