--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
-name: "LLNL OneLab"
+name: "LLNL Jekyll Template"
 author: "Ian Lee <lee1001@llnl.gov>"
-description: "LLNL OneLab Jekyll Template"
+description: "LLNL Jekyll Template"
 
 url: "http://localhost:4000"
 
