Quote img_path.

--- a/_config.yaml
+++ b/_config.yaml
@@ -5,7 +5,7 @@ description: "OS X Management Software"
 url: "http://macpatch.llnl.gov"
 
 
-img_path: /assets/images
+img_path: "/assets/images"
 
 collections:
   docs:
