Renamed docs to documentation.

--- a/_config.yaml
+++ b/_config.yaml
@@ -5,9 +5,9 @@ description: "OS X Management Software"
 url: "http://macpatch.llnl.gov"
 
 collections:
-  docs:
+  documentation:
     output: true
-    permalink: /:path/
+    permalink: /docs/:path/
 
 # paginate: 10
 
