--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ MacPatch/openssl-xcode/openssl/libcrypto.a
 MacPatch/openssl-xcode/openssl/libssl.a
 MacPatch/openssl-xcode/openssl/crypto/buildinf.h
 *.o
+*.mode1v3
+*.pbxuser
+xcuserdata
+xcuserdata/*
+*.xcworkspace/*
+*.xcworkspace
