Fix issue with Jobs not running

--- a/MacPatch Server/Server/conf/app/mods/site/WEB-INF/web.xml
+++ b/MacPatch Server/Server/conf/app/mods/site/WEB-INF/web.xml
@@ -122,4 +122,15 @@
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 	</welcome-file-list>
+
+	<security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Protected Context</web-resource-name>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <!-- auth-constraint goes here if you requre authentication -->
+        <user-data-constraint>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
 </web-app>
