Update App Version

--- a/MacPatch Server/Server/conf/etc/siteconfig.json
+++ b/MacPatch Server/Server/conf/etc/siteconfig.json
@@ -88,7 +88,7 @@
         },
         "dbSchema": 
         {
-            "checkSchema": true
+            "checkSchema": false
         }
     }
 }
