Changed from redcarpet to kramdown.  Github only supports kramdown now https://github.com/blog/2100-github-pages-now-faster-and-simpler-with-jekyll-3-0

--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ collections:
 # paginate: 10
 
 permalink: pretty
-# markdown: kramdown
 
-markdown: redcarpet
-redcarpet:
-  extensions: [tables]
+markdown: kramdown
+kramdown:
+  input: GFM # Enable GitHub Flavored Markdown (fenced code blocks)
+  hard_wrap: false
