Update MPServer Port Update mysql cnf for 5.7

--- a/MacPatch Server/Server/conf/Database/my.cnf
+++ b/MacPatch Server/Server/conf/Database/my.cnf
@@ -16,9 +16,9 @@ default_storage_engine         = InnoDB
 socket                         = /usr/local/mysql/data/mysql.sock
 pid_file                       = /usr/local/mysql/data/mysql.pid
 
-# MyISAM #
-key_buffer_size                = 32M
-myisam_recover                 = FORCE,BACKUP
+# 5.7 Additions
+sql_mode                       = STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION
+server-id                      = 1
 
 # SAFETY #
 max_allowed_packet             = 16M
