--- a/MacPatch Server/Server/conf/Reposado/systemd/MPNginx.service
+++ b/MacPatch Server/Server/conf/Reposado/systemd/MPNginx.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=The NGINX HTTP and reverse proxy server for Reposado
+Description=The MacPatch NGINX HTTP server for Reposado
 After=syslog.target network.target remote-fs.target nss-lookup.target
 
 [Service]
 Type=forking
-PIDFile=/run/nginx.pid
+PIDFile=/Library/MacPatch/Reposado/nginx/logs/nginx.pid
 ExecStartPre=/Library/MacPatch/Reposado/nginx/sbin/nginx -t
 ExecStart=/Library/MacPatch/Reposado/nginx/sbin/nginx
 ExecReload=/bin/kill -s HUP $MAINPID
