--- a/Server/conf/nginx/sites/flask_mpconsole.conf
+++ b/Server/conf/nginx/sites/flask_mpconsole.conf
@@ -13,14 +13,14 @@ server {
 
 server {
 
-	listen 			443 ssl;
-	server_name		_;
+	listen 443;
+	server_name _;
 	
 	add_header X-Frame-Options "SAMEORIGIN";
 
-	access_log		[SRVBASE]/logs/nginx_console_access.log;
-	error_log		[SRVBASE]/logs/nginx_console_error.log;
-	
+	access_log	[SRVBASE]/logs/nginx_console_access_ssl.log;
+	error_log	[SRVBASE]/logs/nginx_console_error_ssl.log;
+
 	ssl on;
 	ssl_certificate 			[SRVBASE]/etc/apacheCerts/server.crt;
 	ssl_certificate_key			[SRVBASE]/etc/apacheCerts/server.key;
@@ -32,7 +32,7 @@ server {
 	# Max 10gig upload
 	client_max_body_size 10G;
 
-	location / {
+    location / {
 		# checks for static files; if not found, proxy to app
 		try_files $uri @proxy_to_app;
 	}
@@ -47,6 +47,6 @@ server {
 		proxy_redirect off;
 		proxy_buffering off;
 		
-		proxy_pass http://127.0.0.1:8080;
+		proxy_pass http://127.0.0.1:3601;
 	}
 }
