--- a/Server/conf/nginx/sites/flask_mpapi.conf
+++ b/Server/conf/nginx/sites/flask_mpapi.conf
@@ -9,8 +9,8 @@ server {
 	error_log	[SRVBASE]/logs/nginx_ws_error.log;
 
 	ssl on;
-	ssl_certificate 			[SRVBASE]/etc/apacheCerts/server.crt;
-	ssl_certificate_key			[SRVBASE]/etc/apacheCerts/server.key;
+	ssl_certificate 			[SRVBASE]/etc/ssl/server.crt;
+	ssl_certificate_key			[SRVBASE]/etc/ssl/server.key;
 	ssl_prefer_server_ciphers   on;
 	
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
