Update default agent tasks

--- a/Server/apps/mpconsole/static/json/default_tasks.json
+++ b/Server/apps/mpconsole/static/json/default_tasks.json
@@ -1,5 +1,5 @@
 {
-  "version" : 1,
+  "version" : 2,
   "mpTasks" :
   [
 	{
@@ -8,7 +8,7 @@
 	  "enddate" : "2050-01-01",
 	  "startdate" : "2011-01-01",
 	  "active" : "1",
-	  "interval" : "Every@900",
+	  "interval" : "EVERY@900",
 	  "idrev" : "1",
 	  "parent" : "0",
 	  "scope" : "Global",
@@ -24,7 +24,7 @@
 	  "enddate" : "2050-01-01",
 	  "startdate" : "2011-01-01",
 	  "active" : "1",
-	  "interval" : "Every@3600",
+	  "interval" : "EVERY@3600",
 	  "idrev" : "1",
 	  "parent" : "0",
 	  "scope" : "Global",
@@ -40,7 +40,7 @@
 	  "enddate" : "2050-01-01",
 	  "startdate" : "2011-01-01",
 	  "active" : "1",
-	  "interval" : "Recurring@Daily@12:00:00",
+	  "interval" : "RECURRING@Daily@12:00:00",
 	  "idrev" : "1",
 	  "parent" : "0",
 	  "scope" : "Global",
@@ -56,7 +56,7 @@
 	  "enddate" : "2050-01-01",
 	  "startdate" : "2011-01-01",
 	  "active" : "1",
-	  "interval" : "Recurring@Daily@18:00:00",
+	  "interval" : "RECURRING@Daily@18:00:00",
 	  "idrev" : "2",
 	  "parent" : "0",
 	  "scope" : "Global",
@@ -104,7 +104,7 @@
 	  "enddate" : "2050-01-01",
 	  "startdate" : "2012-01-01",
 	  "active" : "1",
-	  "interval" : "Every@14400",
+	  "interval" : "EVERY@14400",
 	  "idrev" : "1",
 	  "parent" : "0",
 	  "scope" : "Global",
@@ -151,7 +151,7 @@
 	  "description" : "Re-Post failed post attempts",
 	  "enddate" : "2050-01-01",
 	  "startdate" : "2011-01-01",
-	  "active" : "1",
+	  "active" : "0",
 	  "interval" : "EVERYRAND@7200",
 	  "idrev" : "1",
 	  "parent" : "0",
