Update Reposado stuff for 10.14

--- a/Source/Server/conf/nginx/sites/reposado_ssl.conf
+++ b/Source/Server/conf/nginx/sites/reposado_ssl.conf
@@ -20,52 +20,56 @@ server {
 	client_max_body_size 10G;
 
     location / {
-            root [SRVCONTENT]/Reposado/html;
-            index  index.html index.htm;
+        root [SRVCONTENT]/Reposado/html;
+        index  index.html index.htm;
 
-            # Using URL-REWRITE
-            # Example is http://myserver.com/index.sucatalog
-            #
+        # Using URL-REWRITE
+        # Example is http://myserver.com/index.sucatalog
+        #
 
-            ## 10.4.x - Tiger
-            if ( $http_user_agent ~ "Darwin/8" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/index$1.sucatalog last;
-            }
-            ## 10.5.x - Leopard
-            if ( $http_user_agent ~ "Darwin/9" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-leopard.merged-1$1.sucatalog last;
-            }
-            ## 10.6.x - Snow Leopard
-            if ( $http_user_agent ~ "Darwin/10" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-leopard-snowleopard.merged-1$1.sucatalog last;
-            }
-            ## 10.7.x - Lion
-            if ( $http_user_agent ~ "Darwin/11" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-lion-snowleopard-leopard.merged-1$1.sucatalog last;
-            }
-            ## 10.8.x - Mountain Lion
-            if ( $http_user_agent ~ "Darwin/12" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
-            }
-            ## 10.9.x - Mavericks
-            if ( $http_user_agent ~ "Darwin/13" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
-            }
-            ## 10.10.x - Yosemite
-            if ( $http_user_agent ~ "Darwin/14" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
-            }
-            ## 10.11.x - El Cap
-            if ( $http_user_agent ~ "Darwin/15" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
-            }
-            ## 10.12.x - El Cap
-            if ( $http_user_agent ~ "Darwin/16" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.12-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
-            }
-            ## 10.13.x - El Cap
-            if ( $http_user_agent ~ "Darwin/17" ){
-              rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.13-10.12-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
-            }
-	}
+        ## 10.4.x - Tiger
+        if ( $http_user_agent ~ "Darwin/8" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/index$1.sucatalog last;
+        }
+        ## 10.5.x - Leopard
+        if ( $http_user_agent ~ "Darwin/9" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-leopard.merged-1$1.sucatalog last;
+        }
+        ## 10.6.x - Snow Leopard
+        if ( $http_user_agent ~ "Darwin/10" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-leopard-snowleopard.merged-1$1.sucatalog last;
+        }
+        ## 10.7.x - Lion
+        if ( $http_user_agent ~ "Darwin/11" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-lion-snowleopard-leopard.merged-1$1.sucatalog last;
+        }
+        ## 10.8.x - Mountain Lion
+        if ( $http_user_agent ~ "Darwin/12" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
+        }
+        ## 10.9.x - Mavericks
+        if ( $http_user_agent ~ "Darwin/13" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
+        }
+        ## 10.10.x - Yosemite
+        if ( $http_user_agent ~ "Darwin/14" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
+        }
+        ## 10.11.x - El Cap
+        if ( $http_user_agent ~ "Darwin/15" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
+        }
+        ## 10.12.x - El Cap
+        if ( $http_user_agent ~ "Darwin/16" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.12-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
+        }
+        ## 10.13.x - El Cap
+        if ( $http_user_agent ~ "Darwin/17" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.13-10.12-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
+        }
+        ## 10.14.x - El Cap
+        if ( $http_user_agent ~ "Darwin/18" ){
+          rewrite ^/index(.*)\.sucatalog$ /content/catalogs/others/index-10.14-10.13-10.12-10.11-10.10-10.9-mountainlion-lion-snowleopard-leopard.merged-1$1.sucatalog last;
+        }
+    }
 }
