--- a/Source/Server/apps/mpconsole/package.json
+++ b/Source/Server/apps/mpconsole/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MacPatch",
-  "version": "3.1.0",
+  "version": "3.1.2",
   "description": "MacPatch",
   "author": "Charles Heizer",
   "license": "GPL-2.0-only",
@@ -10,10 +10,10 @@
   },
   "dependencies": {
 	"ace-editor-builds": "^1.2.4",
-	"bootstrap": "3.3.7",
-	"bootstrap-chosen": "^1.4.2",
-	"bootstrap-editable": "^1.0.1",
-	"bootstrap-table": "^1.11.1",
+	"bootstrap": "3.4.0",
+	"bootstrap-chosen": "1.4.2",
+	"bootstrap-editable": "1.0.1",
+	"bootstrap-table": "1.12.2",
 	"brace": "^0.11.1",
 	"chart.js": "^2.7.1",
 	"colresizable": "^1.6.0",
