MacPatch 3.3.2 Bug Fix Release - Fixes local database - Fixes tasks rerunning every 30seconds - Fixes SUS Server reset

--- a/Source/MacPatch/MPLibrary/MPLibrary.xcodeproj/xcshareddata/xcschemes/MPLibrary.xcscheme
+++ b/Source/MacPatch/MPLibrary/MPLibrary.xcodeproj/xcshareddata/xcschemes/MPLibrary.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "1110"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -17,21 +17,7 @@
                BlueprintIdentifier = "8F4B1DE216DD1BC600E15A9E"
                BuildableName = "libMPLibrary.a"
                BlueprintName = "MPLibrary"
-               ReferencedContainer = "container:../MPLibrary/MPLibrary.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8F60AD2D2243F67C00FDFBCA"
-               BuildableName = "MPUpdater"
-               BlueprintName = "MPUpdater"
-               ReferencedContainer = "container:MPUpdater.xcodeproj">
+               ReferencedContainer = "container:MPLibrary.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -41,15 +27,6 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8F60AD2D2243F67C00FDFBCA"
-            BuildableName = "MPUpdater"
-            BlueprintName = "MPUpdater"
-            ReferencedContainer = "container:MPUpdater.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
       </Testables>
    </TestAction>
@@ -63,16 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8F60AD2D2243F67C00FDFBCA"
-            BuildableName = "MPUpdater"
-            BlueprintName = "MPUpdater"
-            ReferencedContainer = "container:MPUpdater.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -80,16 +47,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8F60AD2D2243F67C00FDFBCA"
-            BuildableName = "MPUpdater"
-            BlueprintName = "MPUpdater"
-            ReferencedContainer = "container:MPUpdater.xcodeproj">
+            BlueprintIdentifier = "8F4B1DE216DD1BC600E15A9E"
+            BuildableName = "libMPLibrary.a"
+            BlueprintName = "MPLibrary"
+            ReferencedContainer = "container:MPLibrary.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
