--- a/Source/MacPatch/MPUpdater/MPUpdater/Supporting_Files/MPUpdater-Info.plist
+++ b/Source/MacPatch/MPUpdater/MPUpdater/Supporting_Files/MPUpdater-Info.plist
@@ -2,10 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 Lawrence Livremore National Laboratory. All rights reserved.</string>
 	<key>CFBundleIdentifier</key>
-	<string>gov.llnl.mp.updater</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleName</key>
 	<string>MPUpdater</string>
 	<key>CFBundleShortVersionString</key>
@@ -19,5 +17,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2019 Lawrence Livremore National Laboratory. All rights reserved.</string>
 </dict>
 </plist>
