--- a/Source/MacPatch/gov.llnl.mp.helper/gov.llnl.mp.helper.xcodeproj/xcshareddata/xcschemes/gov.llnl.mp.helper.xcscheme
+++ b/Source/MacPatch/gov.llnl.mp.helper/gov.llnl.mp.helper.xcodeproj/xcshareddata/xcschemes/gov.llnl.mp.helper.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "1110"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -14,24 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8F4B1DE216DD1BC600E15A9E"
-               BuildableName = "libMPLibrary.a"
-               BlueprintName = "MPLibrary"
-               ReferencedContainer = "container:../MPLibrary/MPLibrary.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8F60AD2D2243F67C00FDFBCA"
-               BuildableName = "MPUpdater"
-               BlueprintName = "MPUpdater"
-               ReferencedContainer = "container:MPUpdater.xcodeproj">
+               BlueprintIdentifier = "8F7665F81E4BA6A100DF27BE"
+               BuildableName = "gov.llnl.mp.helper"
+               BlueprintName = "gov.llnl.mp.helper"
+               ReferencedContainer = "container:gov.llnl.mp.helper.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -41,22 +27,14 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8F60AD2D2243F67C00FDFBCA"
-            BuildableName = "MPUpdater"
-            BlueprintName = "MPUpdater"
-            ReferencedContainer = "container:MPUpdater.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
       </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      debugAsWhichUser = "root"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -67,10 +45,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8F60AD2D2243F67C00FDFBCA"
-            BuildableName = "MPUpdater"
-            BlueprintName = "MPUpdater"
-            ReferencedContainer = "container:MPUpdater.xcodeproj">
+            BlueprintIdentifier = "8F7665F81E4BA6A100DF27BE"
+            BuildableName = "gov.llnl.mp.helper"
+            BlueprintName = "gov.llnl.mp.helper"
+            ReferencedContainer = "container:gov.llnl.mp.helper.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -84,10 +62,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8F60AD2D2243F67C00FDFBCA"
-            BuildableName = "MPUpdater"
-            BlueprintName = "MPUpdater"
-            ReferencedContainer = "container:MPUpdater.xcodeproj">
+            BlueprintIdentifier = "8F7665F81E4BA6A100DF27BE"
+            BuildableName = "gov.llnl.mp.helper"
+            BlueprintName = "gov.llnl.mp.helper"
+            ReferencedContainer = "container:gov.llnl.mp.helper.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
