--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -24,10 +24,10 @@ serverurl=unix:///var/run/supervisor/supervisor.sock ; use a unix:// URL  for a 
 command=/usr/sbin/nginx -g "daemon off;"
 
 [program:mpconsole]
-command=%(ENV_MPSERVERBASE)s/apps/env/console/bin/python %(ENV_MPSERVERBASE)s/apps/mpconsole.py gunicorn
+command=%(ENV_MPSERVERBASE)s/env/console/bin/python %(ENV_MPSERVERBASE)s/apps/mpconsole.py gunicorn
 
 [program:mpapi]
-command=%(ENV_MPSERVERBASE)s/apps/env/api/bin/python %(ENV_MPSERVERBASE)s/apps/mpapi.py gunicorn
+command=%(ENV_MPSERVERBASE)s/env/api/bin/python %(ENV_MPSERVERBASE)s/apps/mpapi.py gunicorn
 
 [program:mpinventory]
 command=%(ENV_MPSERVERBASE)s/conf/scripts/MPInventoryD.py --config %(ENV_MPSERVERBASE)s/etc/siteconfig.json --files %(ENV_MPSERVERBASE)s/InvData/files
